changed nav color

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body class="d-flex flex-column h-100">
     <header>
       <!-- Fixed navbar -->
-      <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light d-md-flex justify-content-md-between">
+      <nav class="navbar navbar-expand-md navbar-light fixed-top bg-white d-md-flex justify-content-md-between">
         <div>
           <a class="navbar-brand" href="index.html"><img class="logo" src="img/logo.png" alt="NACRO logo"></a>
         </div>
@@ -103,19 +103,19 @@
 
           <div class="carousel-inner">
             <div class="carousel-item active" data-interval="3000">
-              <img class="d-block w-100 startImage" src="img/home_carousel1.png" alt="First slide image">
+              <img class="d-block w-100 startImage" src="img/home_carousel1_cropped.png" alt="First slide image">
               <div class="carousel-caption text-light d-flex justify-content-center w-100">
                 <b><h1 class="carCap">Build Relationships</h1></b>
               </div>
             </div>
             <div class="carousel-item" data-interval="3000">
-              <img class="d-block w-100 startImage" src="img/home_carousel2.png" alt="Second slide image">
+              <img class="d-block w-100 startImage" src="img/home_carousel2_cropped.png" alt="Second slide image">
               <div class="carousel-caption text-light d-flex justify-content-center w-100">
                 <b><h1 class="carCap">Refine Strategies</h1></b>
               </div>
             </div>
             <div class="carousel-item" data-interval="3000">
-              <img class="d-block w-100 startImage" src="img/home_carousel3.png" alt="Third slide image">
+              <img class="d-block w-100 startImage" src="img/home_carousel3_cropped.png" alt="Third slide image">
               <div class="carousel-caption text-light d-flex justify-content-center w-100">
                 <b><h1 class="carCap">Attend Conferences</h1></b>
               </div>
@@ -127,18 +127,13 @@
         <!-- Highlights section -->
         <h1 class="mt-5 mb-3">Highlights</h1>
         <div id="carouselHighlights" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselHighlights" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselHighlights" data-slide-to="1"></li>
-            <li data-target="#carouselHighlights" data-slide-to="2"></li>
-          </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="row">
                 <div class="col-md-1"></div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <a href="#"><img class="card-img-top" src="img/highlight1.png" alt="Card image"></a>
+                    <a href="#"><img class="card-img-top" style="height: 150px;" src="img/highlight1.png" alt="Card image"></a>
                     <div class="card-body">
                       <h6 class="card-title text-center"><a class="highlight-title" href="#">Webinar: Corporate Engagement Collaborations between Advancement & Career Services</a></h6>
                     </div>
@@ -146,15 +141,15 @@
                 </div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <a href="#"><img class="card-img-top" src="img/highlight2.png" alt="Card image"></a>
+                    <a href="#"><img class="card-img-top" style="height: 150px;" src="img/highlight2.png" alt="Card image"></a>
                     <div class="card-body">
-                      <h6 class="card-title text-center"><a class="highlight-title" href="#">Member Spotlight:<br/> Aimee Ahmed</a></h6>
+                      <h6 class="card-title text-center"><a class="highlight-title" href="#">Member Spotlight: <br/> Aimee Ahmed</a></h6>
                     </div>
                   </div>
                 </div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <a href="#"><img class="card-img-top" src="img/highlight3.png" alt="Card image"></a>
+                    <a href="#"><img class="card-img-top" style="height: 150px;" src="img/highlight3.png" alt="Card image"></a>
                     <div class="card-body">
                       <h6 class="card-title text-center"><a class="highlight-title" href="#">Member Meet Up: Tips and tricks for gathering data for Gold Standards Survey</a></h6>
                     </div>
@@ -168,25 +163,25 @@
                 <div class="col-md-1"></div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <a href="#"><img class="card-img-top" src="img/image_placeholder.png" alt="Card image"></a>
+                    <a href="#"><img class="card-img-top" style="height: 150px;" src="img/highlight4.png" alt="Card image"></a>
                     <div class="card-body">
-                      <h6 class="card-title text-center"><a class="highlight-title" href="#">Other Highlights Here</a></h6>
+                      <h6 class="card-title text-center"><a class="highlight-title" href="#">Panel: Alumni Workplace Engagement - Building Bridges Between Your Alumni, Where They Work, and Your Institution</a></h6>
                     </div>
                   </div>
                 </div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <a href="#"><img class="card-img-top" src="img/image_placeholder.png" alt="Card image"></a>
+                    <a href="#"><img class="card-img-top" style="height: 150px;" src="img/highlight5.png" alt="Card image"></a>
                     <div class="card-body">
-                      <h6 class="card-title text-center"><a class="highlight-title" href="#">Other Highlights Here</a></h6>
+                      <h6 class="card-title text-center"><a class="highlight-title" href="#">Member Meet-up: What is a Big Ideas Initiative? Aligning Industry Priorities with Fundraising Campaigns</a></h6>
                     </div>
                   </div>
                 </div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <a href="#"><img class="card-img-top" src="img/image_placeholder.png" alt="Card image"></a>
+                    <a href="#"><img class="card-img-top" style="height: 150px;" src="img/highlight6.png" alt="Card image"></a>
                     <div class="card-body">
-                      <h6 class="card-title text-center"><a class="highlight-title" href="#">Other Highlights Here</a></h6>
+                      <h6 class="card-title text-center"><a class="highlight-title" href="#">Member Spotlight: <br/> Anthony Peebles</a></h6>
                     </div>
                   </div>
                 </div>
@@ -198,32 +193,31 @@
                 <div class="col-md-1"></div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <a href="#"><img class="card-img-top" src="img/image_placeholder.png" alt="Card image"></a>
+                    <a href="#"><img class="card-img-top" style="height: 150px;" src="img/highlight7.png" alt="Card image"></a>
                     <div class="card-body">
-                      <h6 class="card-title text-center"><a class="highlight-title" href="#">Other Highlights Here</a></h6>
+                      <h6 class="card-title text-center"><a class="highlight-title" href="#">Member Spotlight: Elizabeth Lanier-Shipp</a></h6>
                     </div>
                   </div>
                 </div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <a href="#"><img class="card-img-top" src="img/image_placeholder.png" alt="Card image"></a>
+                    <a href="#"><img class="card-img-top" style="height: 150px;" src="img/highlight8.png" alt="Card image"></a>
                     <div class="card-body">
-                      <h6 class="card-title text-center"><a class="highlight-title" href="#">Other Highlights Here</a></h6>
+                      <h6 class="card-title text-center"><a class="highlight-title" href="#">Panel: Teaming with Economic Developers to Address Workforce Needs</a></h6>
                     </div>
                   </div>
                 </div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <a href="#"><img class="card-img-top" src="img/image_placeholder.png" alt="Card image"></a>
+                    <a href="#"><img class="card-img-top" style="height: 150px;" src="img/highlight9.png" alt="Card image"></a>
                     <div class="card-body">
-                      <h6 class="card-title text-center"><a class="highlight-title" href="#">Other Highlights Here</a></h6>
+                      <h6 class="card-title text-center"><a class="highlight-title" href="#">AURP Virtual Seminar: Winning the War for Talent and Technology</a></h6>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-1"></div>
               </div>
             </div>
-            <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
           </div>
           <a class="carousel-control-prev" href="#carouselHighlights" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -263,12 +257,10 @@
             </div>
             <div class="col-lg-1"></div>
             <div class="col-lg-4">
-              <div class="card">
+              <div class="card h-100">
                 <div class="card-body">
-                  <h2 class="card-title text-center">Our Annual Conference</h2>
-                  <br/><br/><br/>
-                  <p class="card-text">Join NACRO for our annual conference to network and learn from other corporate relations professionals, build a holistic corporate relations “blueprint," and take part in our Mastery Series!</p>
-                  <br/><br/>
+                  <h2 class="card-title text-center">Our Annual Conference</h2> <br/>
+                  <p class="card-text">Join NACRO for our annual conference to network and learn from other corporate relations professionals, build a holistic corporate relations “blueprint," and take part in our Mastery Series!</p> <br/>
                   <p class="card-text"><a href="conference.html">Learn more &raquo;</a></p>
                 </div>
               </div>
@@ -280,14 +272,14 @@
 
         <!-- Member insights section -->
         <div id="carouselInsights" class="carousel slide my-3 py-3" data-ride="carousel">
-          <h2 class="text-center pt-3">Member Insights</h2>
-          <br/>
           <ol class="carousel-indicators">
             <li data-target="#carouselInsights" data-slide-to="0" class="active"></li>
             <li data-target="#carouselInsights" data-slide-to="1"></li>
             <li data-target="#carouselInsights" data-slide-to="2"></li>
             <li data-target="#carouselInsights" data-slide-to="3"></li>
           </ol>
+          <h2 class="text-center pt-3">Member Insights</h2>
+          <br/>
           <div class="carousel-inner">
             <div class="carousel-item active" data-interval="4000">
               <div class="row">
@@ -329,7 +321,6 @@
                 <div class="col-lg-2"></div>
               </div>
             </div>
-            <br/><br/><br/><br/><br/><br/><br/>
           </div>
           
         </div>
