--- a/upcoming.html
+++ b/upcoming.html
@@ -21,7 +21,7 @@
   <body class="d-flex flex-column h-100">
     <header>
       <!-- Fixed navbar -->
-      <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light d-md-flex justify-content-md-between">
+      <nav class="navbar navbar-expand-md navbar-light fixed-top bg-white d-md-flex justify-content-md-between">
         <div>
           <a class="navbar-brand" href="index.html"><img class="logo" src="img/logo.png" alt="NACRO logo"></a>
         </div>
