added card shadows

--- a/upcoming.html
+++ b/upcoming.html
@@ -155,7 +155,7 @@
           <!--Featured Card-->
           <div class="container justify-content-center my-3">
             <div class="row justify-content-center mx-3">
-              <div class="card mb-3" id ="featured">
+              <div class="card shadow-sm mb-3" id ="featured">
                 <div class="row no-gutters">
                   <div class="col-md-4 mx-auto">
                     <img src="img/feature.png" class="card-img h-100 p-3" alt="...">
@@ -303,7 +303,7 @@
         <div class="container justify-content-center my-3">
           <div class="row justify-content-start row-cols-1 row-cols-sm-2 row-cols-md-3 mx-3">
             <div class="col filterDiv member-only my-3">
-              <div class="card h-100">
+              <div class="card shadow-sm h-100">
                   <div class="card-body">
                     <p class="card-text">August 11, 12:00 pm EDT</p>
                     <h5 class="card-title">
@@ -316,7 +316,7 @@
               </div>
             </div> 
             <div class="col filterDiv public my-3">
-              <div class="card h-100">
+              <div class="card shadow-sm h-100">
                 <div class="card-body">
                   <p class="card-text">September 9, 11:00 am EDT</p>
                   <h5 class="card-title">
@@ -330,7 +330,7 @@
               </div>
             </div>
             <div class="col filterDiv member-only virtual-events my-3">
-              <div class="card h-100">
+              <div class="card shadow-sm h-100">
                 <div class="card-body">
                   <p class="card-text">December 8, 3:00 pm EDT</p>
                   <h5 class="card-title">
