fixed pictures having bad aspect ratios

--- a/index.html
+++ b/index.html
@@ -126,92 +126,92 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="row">
-                <div class="col-md-1"></div>
-                <div class="col-md d-flex justify-content-center">
+                <div class="col-sm-1"></div>
+                <div class="col-sm d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <a href="#"><img class="card-img-top" style="height: 150px;" src="img/highlight1.png" alt="Card image"></a>
+                    <a href="#"><img class="card-img-top highlightImg" src="img/highlight1.png" alt="Card image"></a>
                     <div class="card-body">
                       <h6 class="card-title text-center"><a class="highlight-title" href="#">Webinar: Corporate Engagement Collaborations between Advancement & Career Services</a></h6>
                     </div>
                   </div>
                 </div>
-                <div class="col-md d-flex justify-content-center">
+                <div class="col-sm d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <a href="#"><img class="card-img-top" style="height: 150px;" src="img/highlight2.png" alt="Card image"></a>
+                    <a href="#"><img class="card-img-top highlightImg" src="img/highlight2.png" alt="Card image"></a>
                     <div class="card-body">
                       <h6 class="card-title text-center"><a class="highlight-title" href="#">Member Spotlight: <br/> Aimee Ahmed</a></h6>
                     </div>
                   </div>
                 </div>
-                <div class="col-md d-flex justify-content-center">
+                <div class="col-sm d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <a href="#"><img class="card-img-top" style="height: 150px;" src="img/highlight3.png" alt="Card image"></a>
+                    <a href="#"><img class="card-img-top highlightImg" src="img/highlight3.png" alt="Card image"></a>
                     <div class="card-body">
                       <h6 class="card-title text-center"><a class="highlight-title" href="#">Member Meet Up: Tips and tricks for gathering data for Gold Standards Survey</a></h6>
                     </div>
                   </div>
                 </div>
-                <div class="col-md-1"></div>
+                <div class="col-sm-1"></div>
               </div>
             </div>
             <div class="carousel-item">
               <div class="row">
-                <div class="col-md-1"></div>
-                <div class="col-md d-flex justify-content-center">
+                <div class="col-sm-1"></div>
+                <div class="col-sm d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <a href="#"><img class="card-img-top" style="height: 150px;" src="img/highlight4.png" alt="Card image"></a>
+                    <a href="#"><img class="card-img-top highlightImg" src="img/highlight4.png" alt="Card image"></a>
                     <div class="card-body">
                       <h6 class="card-title text-center"><a class="highlight-title" href="#">Panel: Alumni Workplace Engagement - Building Bridges Between Your Alumni, Where They Work, and Your Institution</a></h6>
                     </div>
                   </div>
                 </div>
-                <div class="col-md d-flex justify-content-center">
+                <div class="col-sm d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <a href="#"><img class="card-img-top" style="height: 150px;" src="img/highlight5.png" alt="Card image"></a>
+                    <a href="#"><img class="card-img-top highlightImg" src="img/highlight5.png" alt="Card image"></a>
                     <div class="card-body">
                       <h6 class="card-title text-center"><a class="highlight-title" href="#">Member Meet-up: What is a Big Ideas Initiative? Aligning Industry Priorities with Fundraising Campaigns</a></h6>
                     </div>
                   </div>
                 </div>
-                <div class="col-md d-flex justify-content-center">
+                <div class="col-sm d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <a href="#"><img class="card-img-top" style="height: 150px;" src="img/highlight6.png" alt="Card image"></a>
+                    <a href="#"><img class="card-img-top highlightImg" src="img/highlight6.png" alt="Card image"></a>
                     <div class="card-body">
                       <h6 class="card-title text-center"><a class="highlight-title" href="#">Member Spotlight: <br/> Anthony Peebles</a></h6>
                     </div>
                   </div>
                 </div>
-                <div class="col-md-1"></div>
+                <div class="col-sm-1"></div>
               </div>
             </div>
             <div class="carousel-item">
               <div class="row">
-                <div class="col-md-1"></div>
-                <div class="col-md d-flex justify-content-center">
+                <div class="col-sm-1"></div>
+                <div class="col-sm d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <a href="#"><img class="card-img-top" style="height: 150px;" src="img/highlight7.png" alt="Card image"></a>
+                    <a href="#"><img class="card-img-top highlightImg" src="img/highlight7.png" alt="Card image"></a>
                     <div class="card-body">
                       <h6 class="card-title text-center"><a class="highlight-title" href="#">Member Spotlight: Elizabeth Lanier-Shipp</a></h6>
                     </div>
                   </div>
                 </div>
-                <div class="col-md d-flex justify-content-center">
+                <div class="col-sm d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <a href="#"><img class="card-img-top" style="height: 150px;" src="img/highlight8.png" alt="Card image"></a>
+                    <a href="#"><img class="card-img-top highlightImg" src="img/highlight8.png" alt="Card image"></a>
                     <div class="card-body">
                       <h6 class="card-title text-center"><a class="highlight-title" href="#">Panel: Teaming with Economic Developers to Address Workforce Needs</a></h6>
                     </div>
                   </div>
                 </div>
-                <div class="col-md d-flex justify-content-center">
+                <div class="col-sm d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <a href="#"><img class="card-img-top" style="height: 150px;" src="img/highlight9.png" alt="Card image"></a>
+                    <a href="#"><img class="card-img-top highlightImg" src="img/highlight9.png" alt="Card image"></a>
                     <div class="card-body">
                       <h6 class="card-title text-center"><a class="highlight-title" href="#">AURP Virtual Seminar: Winning the War for Talent and Technology</a></h6>
                     </div>
                   </div>
                 </div>
-                <div class="col-md-1"></div>
+                <div class="col-sm-1"></div>
               </div>
             </div>
           </div>
